@@ -876,6 +876,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12350. WASB Logging: Improve WASB Logging around deletes, reads and
     writes (Dushyanth via cnauroth)
 
+    HADOOP-11104. org.apache.hadoop.metrics2.lib.MetricsRegistry needs numerical
+    parameter checking. (Ray Chiang via aajisaka)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
